force-app/main/default/objects/OCI_Stock__c/OCI_Stock__c.object-meta.xml
<CustomObject>
    <description>Internal representation of OCI stock positions</description>
    <label>OCI Stock</label>
    <nameField>
        <label>sku@location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCI Stock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>