force-app/main/default/objects/OCI_Stock__c/fields/ATF__c.field-meta.xml
<CustomField>
    <fullName>ATF__c</fullName>
    <label>ATF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>