force-app/main/default/objects/OCI_Stock__c/fields/ATO__c.field-meta.xml
<CustomField>
    <fullName>ATO__c</fullName>
    <label>ATO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>