force-app/main/default/objects/OCI_Stock__c/fields/Available_To_Sell_ATS__c.field-meta.xml
<CustomField>
    <fullName>Available_To_Sell_ATS__c</fullName>
    <description>ATS = on hand - reservations - safety stock</description>
    <formula>onHand__c - Reserved__c - safetyStockCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ATS = on hand - reservations - safety stock</inlineHelpText>
    <label>Available To Sell (ATS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>