force-app/main/default/objects/OCI_Stock__c/fields/effectiveDate__c.field-meta.xml
<CustomField>
    <fullName>effectiveDate__c</fullName>
    <description>Date of last update in OCI</description>
    <label>effectiveDate</label>
    <type>Date</type>
</CustomField>