force-app/main/default/objects/OCI_Stock__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <description>hidden external id field (equal to name)</description>
    <externalId>true</externalId>
    <label>id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>