force-app/main/default/objects/OCI_Stock__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>OCI Stock</relationshipLabel>
    <relationshipName>OCI_Stock</relationshipName>
    <type>Lookup</type>
</CustomField>