force-app/main/default/objects/OCI_Stock__c/fields/LocExtRef__c.field-meta.xml
<CustomField>
    <fullName>LocExtRef__c</fullName>
    <description>The name of the warehouse as used externally</description>
    <label>Location External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>