force-app/main/default/objects/OCI_Stock__c/fields/onHand__c.field-meta.xml
<CustomField>
    <fullName>onHand__c</fullName>
    <description>physical stock position in the warehouse</description>
    <label>On Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>