force-app/main/default/objects/OCI_Stock__c/fields/Reserved__c.field-meta.xml
<CustomField>
    <fullName>Reserved__c</fullName>
    <description>Amount of stock reserved for outstanding orders</description>
    <label>Reserved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>