force-app/main/default/objects/OCI_Stock__c/fields/safetyStockCount__c.field-meta.xml
<CustomField>
    <fullName>safetyStockCount__c</fullName>
    <description
  >Amount of safety stock kept for this SKU in this warehouse</description>
    <label>Safety stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>