force-app/main/default/objects/OCI_Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Available_To_Sell_ATS__c</columns>
    <columns>onHand__c</columns>
    <columns>Reserved__c</columns>
    <columns>safetyStockCount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>